--- a/app/global.scss
+++ b/app/global.scss
@@ -1,9 +1,11 @@
 body {
+  font-family: CerebriSans-Regular, -apple-system, system-ui, Roboto, sans-serif;
+  margin: 0;
   display: flex;
   flex-direction: column;
-  background-color: #8ebde5;
+  background-color: rgb(245, 246, 248);
 }
 
 main {
-  background-color: rgb(112, 213, 213);
+  background-color: rgb(245, 246, 248);
 }
